# songplayer

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  VERSION  ytfast_after_fix_deploy.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-09T05-30-27-003Z.yml
crates/sp-core/: Cargo.toml
crates/sp-core/src/: config.rs  lib.rs  lyrics.rs  metadata.rs  models.rs  playback.rs  ws.rs
crates/sp-decoder/: Cargo.toml
crates/sp-decoder/src/: error.rs  lib.rs  reader.rs  split_sync.rs  stream.rs  sync.rs  types.rs
crates/sp-decoder/src/audio/: mod.rs  symphonia_reader.rs
crates/sp-decoder/src/video/: mf_reader.rs  mod.rs
crates/sp-decoder/tests/: duration.rs  mf_video_only.rs  symphonia_audio.rs  types_and_errors.rs
crates/sp-decoder/tests/fixtures/: regen.sh  silent_3s.flac
crates/sp-ndi/: Cargo.toml
crates/sp-ndi/src/: deinterleave.rs  error.rs  lib.rs  ndi_sdk.rs  sender.rs  types.rs
crates/sp-server/: Cargo.toml
crates/sp-server/src/: lib.rs  lib_tests.rs  main.rs  obs_bridge.rs  startup.rs
crates/sp-server/src/ai/: client.rs  mod.rs  proxy.rs
crates/sp-server/src/api/: ai.rs  live.rs  live_tests_included.rs  lyrics.rs  mod.rs  routes.rs  routes_tests.rs  routes_tests_spotify.rs  websocket.rs
crates/sp-server/src/db/: mod.rs  mod_tests.rs  mod_tests_v18.rs  models.rs  models_tests.rs
crates/sp-server/src/downloader/: cache.rs  mod.rs  normalize.rs  tools.rs
crates/sp-server/src/lyrics/: aligner.rs  assembly.rs  audio_chunking.rs  audit_ctx.rs  autosub_provider.rs  backend.rs  bootstrap.rs  chunking.rs  claude_merge.rs  claude_merge_deterministic_tests.rs  claude_merge_tests.rs  description_merge.rs  description_merge_absorb.rs  description_merge_audit.rs  description_merge_mapping.rs  description_merge_phantom.rs  description_merge_tests.rs  description_merge_window.rs  description_provider.rs  gather.rs  gemini_audit.rs  gemini_chunks.rs  gemini_client.rs  gemini_parse.rs  gemini_prompt.rs  gemini_provider.rs  genius.rs  lcs.rs  line_splitter.rs  lrclib.rs  merge.rs  merge_tests.rs  mod.rs  orchestrator.rs  provider.rs  quality.rs  qwen3_provider.rs  reconcile.rs  renderer.rs  replicate_client.rs  (+11 more)
crates/sp-server/src/metadata/: claude.rs  gemini.rs  mod.rs  parser.rs
crates/sp-server/src/obs/: mod.rs  ndi_discovery.rs  scene.rs  text.rs
crates/sp-server/src/playback/: lyrics_loader.rs  mod.rs  ndi_health.rs  pipeline.rs  pipeline_heartbeat_tests.rs  pipeline_inline_tests.rs  pipeline_spawn_tests.rs  position_update.rs  recovery.rs  state.rs  submitter.rs  test_helpers.rs  tests.rs  tests_play_video.rs  tests_scene_change.rs  tests_song_end.rs  title.rs
crates/sp-server/src/playlist/: mod.rs  selector.rs
crates/sp-server/src/presenter/: client.rs  mod.rs  payload.rs
crates/sp-server/src/reprocess/: mod.rs
crates/sp-server/src/resolume/: driver.rs  driver_tests.rs  handlers.rs  mod.rs
crates/sp-server/tests/: fake_obs_handshake.rs  scene_detection.rs  startup_migration.rs
crates/sp-server/tests/common/: mod.rs
crates/sp-server/tests/fixtures/autosub/: sentence_level.json3  word_level.json3
docs/experiments/: 2026-04-16-autosub-drift.md
docs/superpowers/plans/: 2026-04-08-ci-deploy-migration.md  2026-04-10-resolume-title-delivery.md  2026-04-10-universal-sp-title-redesign.md  2026-04-11-drop-aac-flac-pipeline.md  2026-04-11-ndi-full-quality-rewrite.md  2026-04-11-songplayer-full-wiring-fix.md  2026-04-12-gemini-metadata-upgrade.md  2026-04-13-karaoke-dual-language.md  2026-04-14-qwen3-forced-aligner.md  2026-04-14-vocal-isolation.md  2026-04-15-yt-subs-chunked-alignment.md  2026-04-16-ensemble-alignment.md  2026-04-16-ensemble-autosub-and-reprocess.md  2026-04-16-phase2-autosub-drift-experiment.md  2026-04-17-live-playlist-click-to-play.md  2026-04-18-youtube-description-lyrics-provider.md  2026-04-20-gemini-chunked-lyrics-provider.md  2026-04-22-worship-training-v22-bundle.md  2026-04-25-ci-performance.md  2026-04-25-scene-on-fixes.md  2026-04-26-ndi-tier1-visibility.md  2026-04-26-resolume-push-hardening.md  2026-04-28-lyrics-pipeline-redesign.md  2026-05-01-spotify-tier1-and-vocals-preservation.md  2026-05-02-spotify-auto-resolver.md
docs/superpowers/specs/: 2026-04-08-ci-deploy-migration-design.md  2026-04-10-ndi-full-quality-rewrite-design.md  2026-04-10-resolume-title-delivery-design.md  2026-04-10-universal-sp-title-redesign.md  2026-04-11-drop-aac-flac-pipeline-design.md  2026-04-12-gemini-metadata-upgrade-design.md  2026-04-13-karaoke-dual-language-design.md  2026-04-14-qwen3-forced-aligner-design.md  2026-04-14-vocal-isolation-revised-design.md  2026-04-15-yt-subs-chunked-alignment-design.md  2026-04-16-ensemble-alignment-design.md  2026-04-16-ensemble-autosub-and-reprocess-design.md  2026-04-16-phase2-autosub-drift-experiment-design.md  2026-04-17-live-playlist-click-to-play-design.md  2026-04-18-youtube-description-lyrics-provider-design.md  (+10 more)
e2e/: frontend.spec.ts  lyrics-dashboard.spec.ts  mock-api.mjs  obs-driver.ts  package-lock.json  package.json  playwright.config.ts  post-deploy-flac.spec.ts  post-deploy.config.ts  post-deploy.spec.ts
e2e/post-deploy-report/: index.html
e2e/tests/: live-mobile.spec.ts  spotify-url-input.spec.ts
scripts/: lyrics_worker.py  measure_lyrics_quality.py  setup-runner.ps1  sync-version.sh
scripts/experiments/: autosub_drift.py  gemini_lyrics.py  test_autosub_drift.py
sp-ui/: Cargo.toml  Trunk.toml  index.html  style.css
sp-ui/src/: api.rs  app.rs  lib.rs  store.rs  ws.rs
sp-ui/src/components/: download_queue.rs  import_url_box.rs  karaoke_panel.rs  live_catalog.rs  live_setlist.rs  lyrics_playlist_section.rs  lyrics_queue_card.rs  lyrics_scroller.rs  lyrics_song_detail.rs  lyrics_song_row.rs  mod.rs  ndi_health.rs  now_playing_card.rs  obs_status.rs  playback_controls.rs  playlist_card.rs  resolume_health.rs  resolume_hosts.rs  settings_form.rs  video_list.rs
sp-ui/src/pages/: dashboard.rs  live.rs  lyrics.rs  mod.rs  settings.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs  tray_icons.rs
