[workspace]
members = [
    "crates/sp-core",
    "crates/sp-ndi",
    "crates/sp-decoder",
    "crates/sp-server",
]
exclude = [
    "sp-ui",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.16.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-tungstenite = "0.26"
sha2 = "0.10"
base64 = "0.22"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
libloading = "0.8"
async-trait = "0.1"
regex = "1"
rand = "0.8"
symphonia = { version = "0.5", default-features = false, features = ["flac"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
