[workspace]

[package]
name = "sp-ui"
version = "0.25.0-dev.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
futures = "0.3"

sp-core = { path = "../crates/sp-core" }
