[package]
name = "sp-decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[dev-dependencies]
# Placeholder crate that defines the `mutants::skip` attribute as a no-op,
# letting cargo-mutants exclude specific functions from mutation testing.
mutants = "0.0.3"
