[package]
name = "sp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sp-server"
path = "src/main.rs"

[dependencies]
sp-core = { path = "../sp-core" }
sp-ndi = { path = "../sp-ndi" }
sp-decoder = { path = "../sp-decoder" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
tower = "0.5"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
